# Stroke-Api

./: README.md  fichier_parquet.parquet  pyproject.toml
stroke_api/: API_tuto.ipynb  api.py  filters.py  streamlit_API.py  streamlit_app.py
stroke_api/data/: healthcare-dataset-stroke-data.csv:Zone.Identifier
stroke_api/pages/: 01_Filtrage.py  02_Insight.py  03_SearchID.py
